# calibration

./: .cmake.conf  CMakeLists.txt  CalibrationConfig.cmake
src/: CMakeLists.txt  inertialbasedscaleestimation.cpp  stereocameracalibration.cpp
src/mcmb/: board.cpp  calibration.cpp  calibration.h
tests/: CMakeLists.txt  tst_imuintrinsics.cpp
